syntax = "proto3";

package consensus.protos;

option go_package = "./consensus/protos";

message RequestVoteRequest {
	int64 term = 1;
	string candidateId = 2;
	int64 lastLogIndex = 3;
	int64 lastLogTerm  = 4;
}

message RequestVoteResponse {
	int64 term = 1;
	bool voteGranted = 2;
}

message AppendEntriesRequest {
	int64 term = 1;
	string leaderId = 2;
	int64 prevLogIndex = 3;
	int64 prevLogTerm = 4;
	bytes entries = 5;
	int64 leaderCommit = 6;
}

message AppendEntriesResponse {
	int64 term = 1;
	bool success = 2;
}

message ErrorResponse {
	int32 errorCode = 1;
	string errorMessage = 2;
}


